# vector

./: Cargo.toml  bdist_rpm.sh  parse_lmod.toml  test.toml  vector_file_config_example.conf
.github/workflows/: changes.yml  cli.yml  component_features.yml  cross.yml  deny.yml  environment.yml  integration-comment.yml  integration.yml  k8s_e2e.yml  manual_soak.yml  misc.yml  protobuf.yml  publish.yml  regression.yml  soak.yml  soak_infra.yml  test.yml  unit_mac.yml  unit_windows.yml  workload_checks.yml
.rpm/: service  vector.spec
lib/codecs/: Cargo.toml
lib/docs-renderer/: Cargo.toml
lib/enrichment/: Cargo.toml
lib/file-source/: Cargo.toml
lib/k8s-e2e-tests/: Cargo.toml
lib/k8s-test-framework/: Cargo.toml
lib/loki-logproto/: Cargo.toml
lib/opentelemetry-proto/: Cargo.toml
lib/prometheus-parser/: Cargo.toml
lib/tracing-limit/: Cargo.toml
lib/value/: Cargo.toml
lib/vector-api-client/: Cargo.toml
lib/vector-buffers/: Cargo.toml
lib/vector-common/: Cargo.toml
lib/vector-common/src/: lib.rs
lib/vector-config/: Cargo.toml
lib/vector-config-common/: Cargo.toml
lib/vector-config-macros/: Cargo.toml
lib/vector-core/: Cargo.toml
lib/vector-lib/src/: lib.rs
lib/vector-lookup/: Cargo.toml
lib/vector-stream/: Cargo.toml
lib/vector-tap/: Cargo.toml
lib/vector-vrl/cli/: Cargo.toml
lib/vector-vrl/functions/: Cargo.toml
lib/vector-vrl/tests/: Cargo.toml
lib/vector-vrl/web-playground/: Cargo.toml
lib/vector-wasm/: Cargo.toml
lib/vrl/cli/: Cargo.toml
lib/vrl/stdlib/: Cargo.toml
vdev/: Cargo.toml
website/: package.json
(+3 files in other folders)
