[package]
name = "vector-vrl-cli"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
vrl-cli = { package = "vrl-cli", git = "https://github.com/itkovian/vrl", branch = "grok-alias-sources" }
clap = { version = "4.1.14", features = ["derive"] }
vrl-stdlib = { package = "vrl-stdlib", git = "https://github.com/itkovian/vrl", branch = "grok-alias-sources" }
vector-vrl-functions = { path = "../functions" }
