[package]
name = "vector-vrl-functions"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
lookup = { package = "lookup", git = "https://github.com/itkovian/vrl", branch = "grok-alias-sources-2" }
vrl = { package = "vrl", git = "https://github.com/itkovian/vrl", branch = "grok-alias-sources-2" }
value = { package = "value", git = "https://github.com/itkovian/vrl", branch = "grok-alias-sources-2", default-features = false, features = [] }
